Fix: spacing on small screens (< 350px)

--- a/src/modules/core/components/MaskedAddress/MaskedAddress.css
+++ b/src/modules/core/components/MaskedAddress/MaskedAddress.css
@@ -13,6 +13,6 @@
 
 @media screen and query700 {
   .middleSection {
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
   }
 }
